<resources>
    <string name="app_name">Apolline</string>

    <string name="todo">TODO</string>

    <string name="disconnected_sensor_display_title">Capteur déconnecté</string>
    <string name="disconnected_sensor_display_message">Le capteur a été déconnecté. Vérifiez qu\'il est allumé et qu\'il est à proximité de votre téléphone.</string>

    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>


    <string name="splash_bluetooth_scan">Scanning in progress...</string>
    <string name="splash_welcome">Welcome to Apolline</string>
    <string name="splash_bluetooth_scan_finished">No device found</string>

    <string name="hello">PM device</string>

    <string name="mapKey">AIzaSyD04i3XxUqRZ7dAfPArm_JhmcdhPFe88uk</string>
    <string name="opt_chart_types_title">Chart types:</string>
    <string name="opt_chart_type_curve">Curve</string>
    <string name="opt_chart_type_bar">Bar</string>
    <string name="opt_temp_title">Temperatures:</string>
    <string name="opt_temp_celsius">Degree Celsius</string>
    <string name="opt_temp_kelvin">Degree Kelvin</string>
    <string name="opt_maps_title">Maps:</string>
    <string name="opt_maps_off">Off</string>
    <string name="opt_maps_on">On</string>
    <string name="opt_auto_tracking_title">Auto-tracking:</string>
    <string name="opt_auto_tracking_off">Off</string>
    <string name="opt_auto_tracking_on">On</string>
    <string name="opt_frequency_title">Frequency of recording:</string>
    <string name="opt_sensor_id_title">Sensor id:</string>
    <string name="opt_sensor_id_default">SEN001</string>
    <string name="opt_ATMO_title">Data ATMO:</string>
    <string name="opt_ATMO_off">Off</string>
    <string name="opt_ATMO_on">On</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_information">Information</string>
    <string name="drawer_contact">Contact</string>
    <string name="drawer_capteur">Capteur</string>

    <string name="sensorBroadCast">apolineSensorBroadCast</string>

    <string name="serviceBroadCastDataSet">dataSet</string>
    <string name="serviceBroadCastDate">date</string>
    <string name="serviceBroadCastSensorName">sensorName</string>

    <string name="send_to">Share data to ..</string>

    <string name="btn_sync">Sync</string>

    <string name="export_json">Export to one JSON</string>
    <string name="export_csv_multi">Export to multiple CSVs</string>
    <string name="export_csv">Export to one CSV</string>
    <string name="export_share">Share</string>


    <string name="progress_default">0</string>
    <string name="ioio_sensor_unit">µg/m3</string>
    <string name="humidity_unit">%</string>
    <string name="temperature_celsius">°C</string>
    <string name="temperature_kelvin">°K</string>

    <string name="ioio_sensor_pm01">PM01</string>
    <string name="ioio_sensor_pm2_5">PM2.5</string>
    <string name="ioio_sensor_pm10">PM10</string>

    <string name="ioio_sensor_rht">Humidity</string>
    <string name="ioio_sensor_tmpk">Temperature</string>
    <string name="ioio_sensor_tmpc">Temperature</string>


    <string name="title_activity_settings">Settings</string>
    <string name="title_menu_debug">Debugging</string>
    <string name="title_activity_debugging_bluetooth">Bluetooth</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>


    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_local_sync_frequency">Local sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_collect_data_frequency">Data collection</string>
    <string name="pref_summary_collect_data_frequency">Data collection frequency</string>
    <string-array name="pref_collect_data_frequency_titles">
        <item>Every second</item>
        <item>Every 2 seconds</item>
        <item>Every 5 seconds</item>
        <item>Every 10 seconds</item>
    </string-array>
    <string-array name="pref_collect_data_frequency_values">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <string name="pref_title_sync_mod">Auto-synchronize data</string>
    <string-array name="pref_sync_mod_titles">
        <item>Do not auto-synchronize data.</item>
        <item>Auto-synchronize data at any time.</item>
        <item>Auto-synchronize data over Wi-Fi only.</item>
    </string-array>

    <string-array name="pref_sync_mod_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_title_sensor_name">Sensor name</string>
    <string name="pref_default_sensor_name">Apolline00</string>

    <string name="pref_title_sensor_mac_address">Sensor MAC Address</string>
    <string name="pref_default_sensor_mac_address">ff-ff-ff-ff-ff-ff</string>

    <string name="pref_title_device_uuid">Device UUID</string>
    <string name="pref_default_device_uuid">ffffffff-ffff-ffff-ffff-ffffffffffff</string>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>


    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="pref_header_chart">Chart</string>
    <string name="pref_title_chart_visible_entries">Visible entries</string>
    <string name="pref_summary_chart_visible_entries">Maximum available points</string>
    <string name="pref_default_chart_visible_entries">100</string>
    <string name="pref_unit_chart_visible_entries_unit">Points</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="scan_device_name">My PHONE</string>
    <string name="found_device_name">My Sensor</string>
    <string name="launch_scan_btn">Scan</string>
    <string name="number_of_data_saved_in_phone">Number of data saved in phone :</string>
    <string name="number_of_data_synchronized_send_to_server">Number of data synchronized (send to server) :</string>
    <string name="number_of_data_unsynchronized">Number of data unsynchronized :</string>
    <string name="date_of_last_synchronization_with_the_server">Date of last synchronization with the server :</string>
    <string name="_0">0</string>

    <string name="negative_button_ok">Ok</string>

    <!--<string name="pref_title_chart_range_y">Axe Y visibility</string>-->
    <!--<string name="pref_title_chart_range_y_summary">Min &lt; Max  </string>-->
    <!--<string name="pref_title_chart_range_y_unit">Points</string>-->

    <string name="pref_header_manage_data">Manage synchronized data</string>

</resources>
