<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/opt_chart_types_title"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/opt_chart_type_curve" />
            <Switch
                android:id="@+id/opt_sw_chart_types"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:checked="false" />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/opt_chart_type_bar" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"
            android:background="#FF909090"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/opt_temp_title"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/opt_temp_celsius" />
            <Switch
                android:id="@+id/opt_sw_temp"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:checked="false"/>
            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="0.5"
                android:text="@string/opt_temp_kelvin" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"
            android:background="#FF909090"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/opt_maps_title"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/opt_maps_off" />
            <Switch
                android:id="@+id/opt_sw_maps"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:checked="false"/>
            <TextView
                android:id="@+id/textView16"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/opt_maps_on" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"
            android:background="#FF909090"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/opt_auto_tracking_title"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/opt_auto_tracking_off" />
            <Switch
                android:id="@+id/opt_sw_auto_tracking"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:checked="false"/>
            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/opt_auto_tracking_on" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"
            android:background="#FF909090"/>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/opt_frequency_title"
            android:textSize="18sp" />
        <SeekBar
            android:id="@+id/opt_sb_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:max="299"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:progress="60" />

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"
            android:background="#FF909090"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/opt_sensor_id_title"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/opt_et_sensor_id"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:text="@string/opt_sensor_id_default" />

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"
            android:background="#FF909090"/>

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/opt_ATMO_title"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:id="@+id/textView17"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/opt_ATMO_off" />
            <Switch
                android:id="@+id/opt_sw_ATMO"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:checked="false"/>
            <TextView
                android:id="@+id/textView18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/opt_ATMO_on" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"
            android:background="#FF909090"/>
    </LinearLayout>

</ScrollView>

