<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="science.apolline.view.activity.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <!--<header-->
        <!--android:fragment="science.apolline.view.activity.SettingsActivity$NotificationPreferenceFragment"-->
        <!--android:icon="@drawable/ic_notifications_black_24dp"-->
        <!--android:title="@string/pref_header_notifications" />-->

    <header
        android:fragment="science.apolline.view.activity.SettingsActivity$ChartPreferenceFragment"
        android:icon="@drawable/ic_multiline_chart_black_24dp"
        android:title="@string/pref_header_chart" />

    <header
        android:fragment="science.apolline.view.activity.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

    <header
        android:fragment="science.apolline.view.activity.SettingsActivity$DataErasePreferenceFragment"
        android:icon="@drawable/ic_save_black_24dp"
        android:title="@string/pref_header_manage_data" />

    <header
        android:icon="@drawable/qr_code"
        android:title="QR Code">


        <intent
            android:targetPackage="science.apolline"
            android:targetClass="science.apolline.view.activity.QrCodeActivity" />

    </header>




</preference-headers>
