<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <ListPreference
        android:defaultValue="2"
        android:entries="@array/pref_sync_mod_titles"
        android:entryValues="@array/pref_sync_mod_values"
        android:key="sync_mod"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_mod" />

    <ListPreference
        android:defaultValue="60"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />

    <ListPreference
        android:defaultValue="60"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="local_sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_local_sync_frequency" />
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_collect_data_frequency_titles"
        android:entryValues="@array/pref_collect_data_frequency_values"
        android:key="collect_data_frequency"
        android:negativeButtonText="Annuler"
        android:positiveButtonText="Valider"
        android:title="@string/pref_title_collect_data_frequency" />

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <!--<Preference android:title="@string/pref_title_system_sync_settings">-->
        <!--<intent android:action="android.settings.SYNC_SETTINGS" />-->
    <!--</Preference>-->

</PreferenceScreen>
